--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - image: jayanthroyg/javaimage:latest
         name: javaimage
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         resources: {}
